src/objects/PKBSiteSetup__c.object
<CustomObject>
    <customHelpPage>knowledgePKBSiteSetupHelp</customHelpPage>
    <description>A public knowledge base template that uses Salesforce Knowledge and Sites.</description>
    <fields>
        <fullName>CacheMaxAge__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The amount of time (in seconds) the content distribution network (CDN) server caches the pages of your PKB site. A value of zero (0) disables caching. CDN caching is automatically enabled on sites. We recommend
            setting this to 300 seconds (5 minutes).
        </inlineHelpText>
        <label>Cache Max Age</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category1Description__c</fullName>
        <inlineHelpText>The description of the first category that appears on the Home page of the public knowledge base.</inlineHelpText>
        <label>Category 1 Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category2Description__c</fullName>
        <inlineHelpText>The description of the second category that appears on the Home page of the public knowledge base.</inlineHelpText>
        <label>Category 2 Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category3Description__c</fullName>
        <inlineHelpText>The description of the third category that appears on the Home page of the public knowledge base.</inlineHelpText>
        <label>Category 3 Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CategoryGroupName__c</fullName>
        <inlineHelpText>The category group to display in the public knowledge base. Only one category group can be displayed.</inlineHelpText>
        <label>Category Group</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeAdText__c</fullName>
        <inlineHelpText>The text that appears under the advertising title on the home page of the public knowledge base. This field is limited to 32,000 characters.</inlineHelpText>
        <label>Home Advertising Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HomeAdTitle__c</fullName>
        <inlineHelpText>The advertising title that appears on the home page of the public knowledge base. This field is limited to 255 characters.</inlineHelpText>
        <label>Home Advertising Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MainLanguage__c</fullName>
        <inlineHelpText>The main language of your knowledge base site, identified by its IETF language codes.</inlineHelpText>
        <label>Site Main Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>en_US</fullName>
                    <default>true</default>
                    <label>en_US</label>
                </value>
                <value>
                    <fullName>da</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
                <value>
                    <fullName>fi</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>ja</fullName>
                </value>
                <value>
                    <fullName>ko</fullName>
                </value>
                <value>
                    <fullName>nl_NL</fullName>
                </value>
                <value>
                    <fullName>pt_BR</fullName>
                </value>
                <value>
                    <fullName>ru</fullName>
                </value>
                <value>
                    <fullName>sv</fullName>
                </value>
                <value>
                    <fullName>th</fullName>
                </value>
                <value>
                    <fullName>zh_CN</fullName>
                </value>
                <value>
                    <fullName>zh_TW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PKBSiteName__c</fullName>
        <inlineHelpText>The Site Name of the Force.com site created for Salesforce Knowledge.</inlineHelpText>
        <label>Associated PKB Site Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RootCategoryName__c</fullName>
        <inlineHelpText>The category to display in the public knowledge base. All child categories under the specified root are displayed. The root must be a category within the category group specified in the previous field.
        </inlineHelpText>
        <label>Root Category</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryLanguages__c</fullName>
        <inlineHelpText>The secondary languages your knowledge base site supports, identified by their IETF language codes.</inlineHelpText>
        <label>Site Secondary Languages</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>en_US</fullName>
                </value>
                <value>
                    <fullName>da</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
                <value>
                    <fullName>fi</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>ja</fullName>
                </value>
                <value>
                    <fullName>ko</fullName>
                </value>
                <value>
                    <fullName>nl_NL</fullName>
                </value>
                <value>
                    <fullName>pt_BR</fullName>
                </value>
                <value>
                    <fullName>ru</fullName>
                </value>
                <value>
                    <fullName>sv</fullName>
                </value>
                <value>
                    <fullName>th</fullName>
                </value>
                <value>
                    <fullName>zh_CN</fullName>
                </value>
                <value>
                    <fullName>zh_TW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PKB Site Setup</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PKB Site Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>